fixed form alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -76,7 +76,7 @@ section h2, section h3, section p {
  
  #main-nav ul li {
 	display: inline;
-	margin-right:28px;
+	margin-right:20px;
 	
  }
  
